<resources>
    <string name="app_name">Registration</string>
    <string name="MainActivityTitle">Home</string>
    <string name="schedule">Course Schedule</string>
    <string name="profile">Sign In</string>
    <string name="exitTitle">Confirmation</string>
    <string name="exitMessage">Are you sure you want to exit?</string>
    <string name="exitYes">Yes</string>
    <string name="exitNo">No</string>
    <string name="help">Help</string>
    <string name="registration">Register for Courses</string>
    <string name="grades">View Grades</string>
    <string name="progress">Degree Progress</string>
    <string name="signout">Sign Out</string>
    <string name="changepw">Change Password</string>
    <string name="helpTitle">Help: %1$s</string>
    <string name="newTerm">Add Term</string>
    <string name="newCourse">Add Course</string>
    <string name="editCourse">Edit Course</string>
    <string name="enterGrades">Enter Grades</string>
    <string name="helpMessage">Author: Johnny Console\nActivity: %1$s\nInformation: %2$s</string>
    <string name="usernameLabel">Username:</string>
    <string name="usernameHint">Username</string>
    <string name="passwordLabel">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="errorTitle">Error</string>
    <string name="signinErrorMessage">Invalid Credentials, Please Try Again.</string>
    <string name="dismiss">Dismiss</string>
    <string name="profileInfo">Enter your username and password here to sign in</string>
    <string name="scheduleInfo">Search the course list by CRN, name or code by each term. Select a course from the list to view its details.</string>
    <string name="mainActivityInfo">Choose a button to navigate to the corresponding screen</string>
    <string name="studentWelcome">Welcome, %1$s!</string>
    <string name="studentHome">Student Home</string>
    <string name="adminWelcome">Welcome Administrator!</string>
    <string name="adminHome">Administrator Home</string>
    <string name="confirmSignout">Are you sure you want to sign out?</string>
    <string-array name="searchBy">
        <item>Course CRN</item>
        <item>Course Code</item>
        <item>Course Title</item>
    </string-array>
    <string name="searchFor">Search for:</string>
    <string name="search">Search</string>
    <string name="searchTerm">Term to Search:</string>
    <string name="backToCourseList">Course List</string>
    <string name="crn">Term: %1$s, CRN: %2$d</string>
    <string name="codeTitle">Code/Title: %1$s: %2$s</string>
    <string name="prerequisites">Prerequisites: %1$s</string>
    <string name="exclusions">Exclusions: %1$s</string>
    <string name="instructor">Instructor: %1$s</string>
    <string name="daytime">Days/Times: %1$s</string>
    <string name="noCourse">No Courses Found</string>
    <string name="noSearchText">Please Enter Search Criteria</string>
    <string name="none">None</string>
    <string name="termTitleLabel">Term Title:</string>
    <string name="termTitle">Term Title</string>
    <string name="termCodeLabel">Term Code:</string>
    <string name="termCode">Term Code</string>
    <string name="addTerm">Add Term</string>
    <string name="addTermInfo">Enter the term code and title to add it to the database</string>
    <string name="newStudent">Add User</string>
    <string name="editStudent">Edit User</string>
    <string name="addTermSuccess">Term "%1$s" Created</string>
    <string name="termExists">The term %1$s already exists. Please try again.</string>
    <string name="addStudentInfo">Add a user to the database by entering their information.</string>
    <string name="firstNameLabel">First Name:</string>
    <string name="firstName">First Name</string>
    <string name="lastNameLabel">Last Name:</string>
    <string name="lastName">Last Name</string>
    <string name="userType">User Type:</string>
    <string name="userStudent">Student</string>
    <string name="userAdmin">Administrator</string>
    <string name="addUserSuccess">User "%1$s" Created</string>
    <string name="userExists">The user %1$s already exists. Please try again.</string>
    <string name="missingInput">Missing Input. Please Try Again.</string>
    <string name="crnLabel">CRN:</string>
    <string name="CRN">CRN</string>
    <string name="courseTermLabel">Term:</string>
    <string name="courseCodeLabel">Course Code:</string>
    <string name="courseCode">Course Code</string>
    <string name="courseTitleLabel">Course Title:</string>
    <string name="courseTitle">Course Title</string>
    <string name="prerequisitesLabel">Prerequisites:</string>
    <string name="prerequisitesHint">Prerequisites</string>
    <string name="exclusionsLabel">Exclusions:</string>
    <string name="exclusionsHint">Exclusions</string>
    <string name="instructorLabel">Instructor:</string>
    <string name="instructorHint">Instructor</string>
    <string name="dayTimeLabel">Days/Time:</string>
    <string name="dateTimeHint">Days/Time</string>
    <string name="newCourseInfo">Add a course to the database by entering its information.</string>
    <string name="addCourseSuccess">Course %1$s %2$s (CRN %3$s) Created</string>
    <string name="courseExists">Course CRN %1$s already exists in %2$s. Please Try Again.</string>
    <string name="changepwInfo">Enter your current password and new password to change your account password.</string>
    <string name="currentPasswordLabel">Current Password:</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPasswordLabel">New Password:</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPasswordLabel">Confirm:</string>
    <string name="confirmPassword">Confirm</string>
    <string name="invalidInput">Invalid Input, Please Try Again.</string>
    <string name="changePasswordSuccess">Your password has been changed.</string>
    <string name="selectUsernameLabel">User to Edit:</string>
    <string name="saveChanges">Save</string>
    <string name="deleteUser">Delete User</string>
    <string name="editStudentInfo">Enter a username to edit the user\'s information. Remember to click the save button before exiting!</string>
    <string name="noStudent">No User found</string>
    <string name="confirmDeleteUser">Are you sure you want to delete this user\'s account?</string>
    <string name="userDeleted">User %1$s Deleted</string>
    <string name="userModified">User Modified</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="editCourseInfo">Select a term code and enter a CRN to edit the course information. Remember to click the save button before exiting!</string>
    <string name="confirmDeleteCourse">Are you sure you want to delete this course?</string>
    <string name="courseModified">Course Modified</string>
    <string name="courseDeleted">CRN %1$s in %2$s deleted</string>
    <string name="gradeCourse">Course Code: %1$s %2$s (CRN: %3$s)</string>
    <string name="gradeStudent">Student: %1$s, %2$s (%3$s)</string>
    <string name="studentGradeListItem">%1$s, %2$s (%3$s) [%4$s]</string>
    <string-array name="grades">
        <item>--</item>
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
        <item>D+</item>
        <item>D</item>
        <item>D-</item>
        <item>F</item>
        <item>CR</item>
        <item>XA+</item>
        <item>XA</item>
        <item>XA-</item>
        <item>XB+</item>
        <item>XB</item>
        <item>XB-</item>
        <item>XC+</item>
        <item>XC</item>
        <item>XC-</item>
        <item>XD+</item>
        <item>XD</item>
        <item>XD-</item>
        <item>XF</item>
    </string-array>
    <string name="grade">Select Grade:</string>
    <string name="enterGradesInfo">Select a term code and enter a CRN to view students registered in that course. Select a student to change their grade. Remember to click the save button before exiting!</string>
    <string name="gradesModified">Grades Saved.</string>
    <string name="adminHomeInfo">Choose a button to navigate to the corresponding screen</string>
    <string name="viewGradesInfo">Use this screen to show the courses you are currently registered in, grades you received for previous courses, and your course completion progress.</string>
    <string name="attempted">Attempted:</string>
    <string name="passed">Passed:</string>
    <string name="percentComplete">(%1$.2f%2$c)</string>
    <string name="myCourses">My Courses:</string>
    <string name="registrationInfo">Use this screen to update your registration. You can add courses to your registration by searching in that term by the course CRN, code or title and selecting it in the first list. You can remove a course from your list by selecting the term to modify, then selecting the course in your list. Remember to click the save button before exiting!</string>
    <string name="registrationChanged">Registration Updated.</string>
</resources>