<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llCRN"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crnLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/etCRN"
            android:ems="13"
            android:inputType="number"
            android:hint="@string/CRN"
            android:autofillHints="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llCourseTerm"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/llCRN"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseTermLabel"
            android:textColor="@color/darkPurple" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/spCourseTerm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llCourseCode"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/llCourseTerm"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseCodeLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/etCourseCode"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/courseCode"
            android:autofillHints="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llCourseTitle"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/llCourseCode"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseTitleLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/etCourseTitle"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/courseTitle"
            android:autofillHints="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llPrerequistes"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/llCourseTitle"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prerequisitesLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/etPrerequisites"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/prerequisitesHint"
            android:autofillHints="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llExclusions"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/llPrerequistes"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exclusionsLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/etExclusions"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/exclusionsHint"
            android:autofillHints="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llInstructor"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/llExclusions"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructorLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/etInstructor"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/instructorHint"
            android:autofillHints="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llDates"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/llInstructor"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dayTimeLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/etDateTime"
            android:ems="13"
            android:inputType="text"
            android:hint="@string/dateTimeHint"
            android:autofillHints="no" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btAddCourse"
        android:text="@string/newCourse"
        android:layout_margin="10dp"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/llDates"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>