<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llCourses"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termCodeLabel"
            android:textColor="@color/darkPurple" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/spCourseTerm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crnLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/etCRN"
            android:hint="@string/CRN"
            android:ems="8"
            android:inputType="number"
            android:autofillHints="no" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btSearch"
        android:text="@string/search"
        android:layout_margin="10dp"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/llCourses"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llWrapper"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/btSearch"
        app:layout_constraintLeft_toLeftOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llCourseCode"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courseCodeLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etCourseCode"
                android:ems="13"
                android:inputType="text"
                android:hint="@string/courseCode"
                android:autofillHints="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llCourseTitle"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courseTitleLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etCourseTitle"
                android:ems="13"
                android:inputType="text"
                android:hint="@string/courseCode"
                android:autofillHints="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llCoursePrerequisites"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prerequisitesLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etPrerequisites"
                android:ems="13"
                android:inputType="text"
                android:hint="@string/prerequisitesHint"
                android:autofillHints="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llCourseExclusions"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exclusionsLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etExclusions"
                android:ems="13"
                android:inputType="text"
                android:hint="@string/exclusionsHint"
                android:autofillHints="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llCourseInstructor"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructorLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etInstructor"
                android:ems="13"
                android:inputType="text"
                android:hint="@string/instructorHint"
                android:autofillHints="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llCourseDayTime"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dayTimeLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etDayTime"
                android:ems="13"
                android:inputType="text"
                android:hint="@string/dateTimeHint"
                android:autofillHints="no" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btSaveChanges"
            android:text="@string/saveChanges"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textColor="@color/lightPurple"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btDeleteCourse"
            android:text="@string/deleteCourse"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textColor="@color/lightPurple"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>