<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:layout_gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/btSchedule"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:drawableTop="@drawable/schedule"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btNewTerm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/newTerm"
        android:drawableTop="@drawable/registration"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btNewStudent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/newStudent"
        android:drawableTop="@drawable/registration"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btEditStudent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/editStudent"
        android:drawableTop="@drawable/registration"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btNewCourse"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/newCourse"
        android:drawableTop="@drawable/registration"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btEditCourse"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/editCourse"
        android:drawableTop="@drawable/registration"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btGrades"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/enterGrades"
        android:drawableTop="@drawable/grades"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btChangePw"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/changepw"
        android:drawableTop="@drawable/changepw"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
</GridLayout>