<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activity.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameLabel"
        android:textColor="@color/lightPurple" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/etUsername"
        android:inputType="text"
        android:textColor="@color/lightPurple"
        android:hint="@string/usernameHint"
        android:ems="15"
        android:autofillHints="none"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordLabel"
        android:textColor="@color/lightPurple" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:textColor="@color/lightPurple"
        android:hint="@string/passwordHint"
        android:ems="15"
        android:autofillHints="none"
        android:layout_marginBottom="30dp"
        android:importantForAccessibility="no" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/btSignIn"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        android:onClick="onSignInClicked" />

</LinearLayout>