<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llUsers"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectUsernameLabel"
            android:textColor="@color/darkPurple" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="13"
            android:id="@+id/etUsername"
            android:hint="@string/usernameHint"
            android:inputType="text"
            android:autofillHints="no" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btSearch"
        android:text="@string/search"
        android:layout_margin="10dp"
        android:background="@color/transparent"
        android:textColor="@color/lightPurple"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/llUsers"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llWrapper"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/btSearch"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llFirstName"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstNameLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etFirstName"
                android:ems="13"
                android:inputType="text"
                android:hint="@string/firstName"
                android:autofillHints="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llLastName"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastNameLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etLastName"
                android:ems="13"
                android:inputType="text"
                android:hint="@string/lastName"
                android:autofillHints="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llPassword"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel"
                android:textColor="@color/darkPurple" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/etPassword"
                android:ems="13"
                android:inputType="textPassword"
                android:hint="@string/passwordHint"
                android:autofillHints="no" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btSaveChanges"
            android:text="@string/saveChanges"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textColor="@color/lightPurple"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/llPassword"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btDeleteUser"
            android:text="@string/deleteUser"
            android:layout_margin="10dp"
            android:background="@color/transparent"
            android:textColor="@color/lightPurple"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/btSaveChanges"
            app:layout_constraintLeft_toLeftOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>